--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -241,15 +241,18 @@
           </div>
         </div>
       </div>
-
     </section>
+
     <section>
+    </section>
 
-    </section><section>
+    <section>
+    </section>
 
-    </section><section>
+    <section>
+    </section>
 
-    </section><section>
+    <section>
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -288,7 +291,9 @@
         </div>
       </div>
 
-    </section><section>
+    </section>
+
+    <section>
       <div class="container">
         <div class="row v-align-children">
           <div class="col-sm-6 col-md-5">
@@ -329,8 +334,9 @@
           </div>
         </div>
       </div>
+    </section>
 
-    </section><section>
+    <section>
       <div class="container">
         <div class="row">
           <div class="col-sm-5">
@@ -369,8 +375,9 @@
           </div>
         </div>
       </div>
+    </section>
 
-    </section><footer class="footer-1 bg-secondary">
+    <footer class="footer-1 bg-secondary">
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
@@ -401,8 +408,8 @@
                 </li>
               </ul>
             </div>
-
           </div>
+
           <div class="col-md-3 col-sm-6">
             <div class="widget">
               <h6 class="title">Latest Updates</h6>
@@ -412,8 +419,8 @@
                 </div>
               </div>
             </div>
-
           </div>
+          
           <div class="col-md-3 col-sm-6">
             <div class="widget">
               <h6 class="title">Instagram</h6>
