--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title><%= title(@title) %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= yield :head %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Marmaris ODH Project" />
+  <meta name="keywords" content="ODH,marmaris,dashboard" />
+  <meta name="author" content="Marmaris" />
+
+  <!-- Font -->
+  <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600', 'data-turbolinks-track' => true %>
 </head>
 <body>
+
+  <%= render partial: 'layouts/header' %>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
-  <%= yield %>
+  <div class="main-container">
+    <%= yield %>
 
+    <%= render partial: 'layouts/footer' %>
+  </div>
+
+
+  <%= yield :js_includes %>
 </body>
 </html>
