--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,12 @@
  * file per style scope.
  *
  *= require themify-icons
+ *= require bootstrap
+ *= require flexslider
+ * require lightbox.min
+ * require ytplayer
+ *= require theme-chipotle
+ *= require
 
  *= require_tree .
  *= require_self
