--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
     <div class="nav-bar">
       <div class="module left">
         <a href="index.html">
-          <img class="logo logo-light" alt="Foundry" src="img/logo-light.png">
-          <img class="logo logo-dark" alt="Foundry" src="img/logo-dark.png">
+          <%= image_tag 'logo-light.png', class: 'logo logo-light', alt: 'Foundry' %>
+          <%= image_tag 'logo-dark.png', class: 'logo logo-dark', alt: 'Foundry' %>
         </a>
       </div>
       <div class="module widget-handle mobile-toggle right visible-sm visible-xs">
