--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -5,6 +5,7 @@
         <h4 class="uppercase mb80">AMBASSADOR CONSOLE</h4>
         <div class="tabbed-content button-tabs vertical">
           <ul class="tabs">
+
             <li class="active">
               <div class="tab-title">
                 <span>DASHBOARD</span>
@@ -20,6 +21,7 @@
                 </p>
               </div>
             </li>
+
             <li>
               <div class="tab-title">
                 <span>REFER</span>
@@ -30,7 +32,7 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
-                      <h4 class="uppercase mb80"> </h4>
+                      <h4 class="uppercase mb80"></h4>
                       <div class="tabbed-content icon-tabs">
                         <ul class="tabs">
                           <li class="active">
@@ -58,9 +60,9 @@
                     </div>
                   </div>
                 </div>
-                <p> </p>
               </div>
             </li>
+
             <li>
               <div class="tab-title">
                 <span>PEOPLE</span>
@@ -179,15 +181,6 @@
 </section>
 
 <section>
-</section>
-
-<section>
-</section>
-
-<section>
-</section>
-
-<section>
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
@@ -225,7 +218,6 @@
       </div>
     </div>
   </div>
-
 </section>
 
 <section>
@@ -313,14 +305,14 @@
 </section>
 
 <%= content_for :js_includes do %>
-  <%= javascript_include_tag 'flexslider.min', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'lightbox.min', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'masonry.min', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'twitterfetcher.min', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'spectragram.min', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'ytplayer.min', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'countdown.min', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'smooth-scroll', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'parallax', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'scripts', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'flexslider.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'lightbox.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'masonry.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'twitterfetcher.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'spectragram.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'ytplayer.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'countdown.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'smooth-scroll.min.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'parallax.js', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'scripts.js', 'data-turbolinks-track' => true %>
 <% end %>
