--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,10 @@
   <nav>
     <div class="nav-bar">
       <div class="module left">
-        <a href="index.html">
+        <%= link_to "/" do %>
           <%= image_tag 'logo-light.png', class: 'logo logo-light', alt: 'Foundry' %>
           <%= image_tag 'logo-dark.png', class: 'logo logo-dark', alt: 'Foundry' %>
-        </a>
+        <% end %>
       </div>
       <div class="module widget-handle mobile-toggle right visible-sm visible-xs">
         <i class="ti-menu"></i>
