--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,13 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require themify-icons
+ *= require bootstrap
+ *= require flexslider
+ * require lightbox.min
+ * require ytplayer
+ *= require theme-chipotle
+
  *= require_tree .
  *= require_self
  */
