--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,11 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require themify-icons
  *= require bootstrap
+ *= require themify-icons
  *= require flexslider
- * require lightbox.min
- * require ytplayer
+ *= require lightbox.min
+ *= require ytplayer
  *= require theme-chipotle
 
  *= require_tree .
