--- a/app/views/accounts/shared/_links.html.erb
+++ b/app/views/accounts/shared/_links.html.erb
@@ -1,21 +1,36 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <p class="mb0">
+    <span>Already Have An Account?</span>
+    <%= link_to "Log in", new_session_path(resource_name), class:'pull-right', 'data-no-turbolink' => true %>
+  </p>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <p class="mb0">
+    Don't Have An Account?
+    <%= link_to "Sign Up", new_registration_path(resource_name), class:"pull-right", 'data-no-turbolink' => true %>
+  </p>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <p class="mb0">
+    Forgot your password?
+    <%= link_to "Reset It", new_password_path(resource_name), class:'pull-right', 'data-no-turbolink' => true %>
+  </p>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
+  <p class="mb0">
+    Didn't Receive Confirmation Email?
+    <%= link_to "Resend", new_confirmation_path(resource_name), class:'pull-right', 'data-no-turbolink' => true %>
+  </p>
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
+  <p class="mb0">
+    Didn't Receive Unlock Instructions?
+    <%= link_to "Resend", new_unlock_path(resource_name), class:'pull-right', 'data-no-turbolink' => true %>
+  </p>
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
