--- a/app/views/accounts/confirmations/new.html.erb
+++ b/app/views/accounts/confirmations/new.html.erb
@@ -1,16 +1,32 @@
-<h2>Resend confirmation instructions</h2>
+<style>
+  section.overlay.cover.fullscreen {
+    min-height:500px!important;
+  }
+</style>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %> 
+<section class="cover fullscreen image-bg overlay">
+  <div class="background-image-holder">
+    <%= image_tag "home6.jpg", class:"background-image", alt:"image" %>
   </div>
+  <div class="container v-align-transform">
+    <div class="row">
+      <section>
+        <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
+          <div class="feature bordered text-center">
+            <h4 class="uppercase">Confirm Here</h4>
+            <%= form_for(resource, html: { class: 'text-left', method: :post }, as: resource_name, url: confirmation_path(resource_name)) do |f| %>
+              <%= devise_error_messages! %>
 
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+              <%= f.email_field :email, placeholder: "Email", autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+
+              <%= f.submit "Resend Confirmation Instructions" %>
+
+              <hr />
+              <%= render "accounts/shared/links" %>
+            <% end %>
+          </div>
+        </div>
+      </section>
+    </div>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
