--- a/app/views/accounts/registrations/new.html.erb
+++ b/app/views/accounts/registrations/new.html.erb
@@ -26,7 +26,7 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="feature bordered text-center">
             <h4 class="uppercase">Register Here</h4>
-            <%= form_for(resource, html: { class: 'text-left' }, as: resource_name, url: session_path(resource_name)) do |f| %>
+            <%= form_for(resource, html: { class: 'text-left' }, as: resource_name, url: registration_path(resource_name)) do |f| %>
               <%= devise_error_messages! %>
 
               <p class="group-tag">Identity</p>
