--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,16 +23,22 @@
           </ul>
         </div>
 
-        <div class="module widget-handle language left">
+        <div class="module widget-handle left">
           <ul class="menu">
             <li class="has-dropdown">
-              <a href="#">JOIN US</a>
+              <a href="#"><%= current_account.full_name %></a>
               <ul>
                 <li>
-                  <a href="#">LOGIN</a>
+                  <%= link_to edit_account_registration_path do %>
+                    <i class="ti ti-settings" style="font-size:11px"></i>
+                    SETTINGS
+                  <% end %>
                 </li>
                 <li>
-                  <a href="#">SIGN UP</a>
+                  <%= link_to destroy_account_session_path, method: :delete do %>
+                    <i class="ti ti-close" style="font-size:11px"></i>
+                    LOGOUT
+                  <% end %>
                 </li>
               </ul>
             </li>
