huge db overhaul

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -38,5 +38,6 @@
   <%= javascript_include_tag 'scripts.js', 'data-turbolinks-track' => true %>
   <%= yield :js_includes %>
 
+  <%= console %>
 </body>
 </html>
