believe Ive solved it!

--- a/app/views/accounts/registrations/new.html.erb
+++ b/app/views/accounts/registrations/new.html.erb
@@ -33,7 +33,7 @@
                 <p class="group-tag">Identity</p>
                 <div class="row">
                   <div class="col-sm-8">
-                    <%= f.email_field :email, placeholder: "Email Address", autofocus: true, class:"group-elem", value: @account.email %>
+                    <%= f.email_field :email, placeholder: "Email Address", autofocus: true, class:"group-elem", value: @ambassador.email %>
                   </div>
                   <div class="col-sm-4">
                     <%= ff.telephone_field :phone, placeholder: "Phone Number", class:"group-elem" %>
