--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
         <div class="module widget-handle left">
           <ul class="menu">
             <li class="has-dropdown">
-              <a href="#"><%= current_account.full_name %></a>
+              <a href="#"><%= current_account.meta.full_name %></a>
               <ul>
                 <li>
                   <%= link_to edit_account_registration_path do %>
